WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212263
[LFC][TFC] Non-collapsing row border should not make the table wider/taller
https://bugs.webkit.org/show_bug.cgi?id=212263
Summary
[LFC][TFC] Non-collapsing row border should not make the table wider/taller
alan
Reported
2020-05-22 08:06:13 PDT
border eats into the content box.
Attachments
Patch
(9.98 KB, patch)
2020-05-22 21:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.18 KB, patch)
2020-05-23 05:44 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-05-22 21:36:52 PDT
Created
attachment 400106
[details]
Patch
alan
Comment 2
2020-05-23 05:44:58 PDT
Created
attachment 400117
[details]
Patch
EWS
Comment 3
2020-05-23 06:34:52 PDT
Committed
r262097
: <
https://trac.webkit.org/changeset/262097
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400117
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-05-23 06:35:16 PDT
<
rdar://problem/63568746
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug