[LFC][TFC] Non-collapsing row border should not make the table wider/taller https://bugs.webkit.org/show_bug.cgi?id=212263

Reviewed by Antti Koivisto.

Source/WebCore:

Non-collapsing row border eats into the content box but oddly it does not
constraint the cell boxes, so we can end up with smaller row content box than
the cell box it contains.

Test: fast/layoutformattingcontext/table-simple-row-border.html

* layout/LayoutUnits.h:
(WebCore::Layout::Edges::width const):
(WebCore::Layout::Edges::height const):
(WebCore::Layout::HorizontalEdges::width const): Deleted.
(WebCore::Layout::VerticalEdges::height const): Deleted.
* layout/tableformatting/TableFormattingContext.cpp:
(WebCore::Layout::TableFormattingContext::setUsedGeometryForRows):
* layout/tableformatting/TableFormattingContextGeometry.cpp:
(WebCore::Layout::TableFormattingContext::Geometry::intrinsicWidthConstraintsForCell):

LayoutTests:

* fast/layoutformattingcontext/table-simple-row-border-expected.html: Added.
* fast/layoutformattingcontext/table-simple-row-border.html: Added.


Canonical link: https://commits.webkit.org/225160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262097 268f45cc-cd09-0410-ab3c-d52691b4dbfc