Source/WebCore/layout/LayoutUnits.h
@@ -115,20 +115,19 @@ inline void Point::moveBy(LayoutPoint offset)
 struct HorizontalEdges {
     LayoutUnit left;
     LayoutUnit right;
-
-    LayoutUnit width() const { return left + right; }
 };
 
 struct VerticalEdges {
     LayoutUnit top;
     LayoutUnit bottom;
-
-    LayoutUnit height() const { return top + bottom; }
 };
 
 struct Edges {
     HorizontalEdges horizontal;
     VerticalEdges vertical;
+
+    LayoutUnit width() const { return horizontal.left + horizontal.right; }
+    LayoutUnit height() const { return vertical.top + vertical.bottom; }
 };
 
 inline Edges operator/(const Edges& edge, size_t value)
